# kairos

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_monitor.py  trace.csv
.github/workflows/: docker-tests.yml  python-tests.yml
core/: __init__.py  event.py  frontier.py  monitor.py  verdict.py
experiments/experiment_1/: experiment1.md  experiment1_trace_generator.py  run_experiments.sh
experiments/experiment_1/traces/: trace-10K.csv  trace-1K.csv
experiments/experiment_2/: experiment2.md  experiment2_trace_generator.py  run_experiments.sh
experiments/experiment_2/traces/: trace-10K.csv  trace-1K.csv
experiments/experiment_3/: experiment3.md  experiment3_trace_generator.py  run_experiments.sh
experiments/experiment_3/traces/: trace-10k.csv  trace-1k.csv
experiments/experiment_4/: experiment4.md  experiment4_trace_generator.py  run_experiments.sh
experiments/experiment_4/traces/: trace-10k.csv  trace-1k.csv
logic/: __init__.py  disjunct_state.py  ep_block_fsm.py  formula.py  gamma_analysis.py  monitor.py  runner.py  verdict.py
model/: __init__.py  event.py  frontier.py  initial_event.py  process_chains.py  vector_clock.py  window.py
parser/: __init__.py  ast_nodes.py  dlnf_transformer.py  exceptions.py  grammar.py  lexer.py
scripts/: run_monitor.py
tests/: conftest.py
tests/core tests/: test_event_scenarios.py  test_frontier_scenarios.py  test_vector_clock_scenarios.py
tests/integration_tests/: test_monitor_scenarios.py  test_paper_examples.py
tests/logic_tests/: test_ep_block_fsm.py  test_monitor_scenarios.py
tests/model_tests/: test_event_model_scenarios.py  test_frontier_model_scenarios.py  test_sliding_window_scenarios.py  test_vector_clock_scenarios.py
tests/parser_tests/: test_dlnf_transformer.py  test_lexer_tokens.py  test_parse_errors.py  test_parser_basic.py  test_precedence.py
utils/: __init__.py  fsm_visualizer.py  logger.py  poet_trace_convertor.py  trace_reader.py  trace_utils.py
